# rust-crates-index-metrics

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yaml  check.yaml  devskim.yml  run.yaml
src/: binstall.rs  main.rs
src/files/: cache.rs
