[package]
name = "rust-crates-index-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release.build-override]
opt-level = 3
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
codegen-units = 1


[dependencies]
bytes = "1.4.0"
crates-index = "0.19.10"
serde = { version = "1.0.175", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["stream"] }
tokio = { version = "1.28.2", features = ["rt", "macros"] }
flate2 = "1.0.26"
rayon = "1.7.0"
futures = "0.3.28"
num_cpus = "1.16.0"
backoff = { version = "0.4.0", features = ["tokio"] }
async-compression = { version = "0.4.1", features = ["tokio", "gzip"] }
tokio-util = { version = "0.7.8", features = ["io"] }
futures-util = "0.3.28"
async-tar = "0.4.2"
async-std = "1.12.0"
tracing-log = "0.1.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
    "std",
    "registry",
    "fmt",
    "json",
] }
systemstat = "0.2.3"
indicatif = "0.17.4"
futures-core = "0.3.28"
thiserror = "1.0.40"
cargo_toml = "0.15.3"
