[package]
name = "rust-crates-index-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release.build-override]
opt-level = 3
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
codegen-units = 1


[dependencies]
bytes = "1.5.0"
crates-index = "1.0.0"
serde = { version = "1.0.197", features = ["derive"] }
reqwest = { version = "0.11.24", features = ["stream"] }
tokio = { version = "1.36.0", features = ["rt", "macros"] }
flate2 = "1.0.28"
rayon = "1.8.1"
futures = "0.3.30"
num_cpus = "1.16.0"
backoff = { version = "0.4.0", features = ["tokio"] }
async-compression = { version = "0.4.6", features = ["tokio", "gzip"] }
tokio-util = { version = "0.7.10", features = ["io"] }
futures-util = "0.3.30"
async-tar = "0.4.2"
async-std = "1.12.0"
tracing-log = "0.2.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "std",
    "registry",
    "fmt",
    "json",
] }
systemstat = "0.2.3"
indicatif = "0.17.8"
futures-core = "0.3.30"
thiserror = "1.0.57"
cargo_toml = "0.19.1"
